--- a/login/login.html
+++ b/login/login.html
@@ -6,6 +6,20 @@
     <title>Login Page</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="section">
+            <form action="login.php" method="post">
+                <label for="username">Username</label>
+                <br>
+                <input type="text" name="username" required>
+                <br>
+                <label for="password">Password</label>
+                <br>
+                <input type="password" name="password">
+                <br>
+                <input type="submit">
+            </form>
+        </div>
+    </div>
 </body>
 </html>
