--- a/login/login.html
+++ b/login/login.html
@@ -16,7 +16,7 @@
                 <br>
                 <label for="password">Password</label>
                 <br>
-                <input type="password" name="password">
+                <input type="password" name="password" required>
                 <br>
                 <input type="submit">
             </form>
