--- a/login/login.html
+++ b/login/login.html
@@ -8,15 +8,20 @@
 </head>
 <body>
     <div class="container">
+        
+            <div class="image">
+                <img src="loginImage.webp" alt="Log In">
+            </div>
+        
        <div class="form">
-            <h2>Sign In</h2>
                 <form action="signIn.php" method="post">
-                    <input type="text" name="username" placeholder="Username">
+                    <h1>Welcome</h1>
+                    <input type="text" name="username" placeholder="Username" required>
                     <br>
                     <br>
-                    <input type="password" name="password" placeholder="password">
+                    <input type="password" name="password" placeholder="Password" required>
                     <br>
-                    <input type="submit">
+                    <input class="button" type="submit" value="Login">
                 </form>
         </div>                 
     </div>
