--- a/login/login.html
+++ b/login/login.html
@@ -10,7 +10,7 @@
     <div class="container">
         
             <div class="image">
-                <img src="loginImage.webp" alt="Log In">
+                <img src="loginImage.avif" alt="Log In">
             </div>
         
        <div class="form">
