created the basic struture for inedx file

--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CodeHive</title>
+    <link rel="stylesheet" href="home/style.css">
+    
+    <script src="home/java.js"></script>
 </head>
 <body>
-    <a href="login/login.html"><button>Click me</button></a>
+    
+    <div class="main">
+        <div class="container">
+            <header>
+                <h1>CodeHive</h1>
+                <ul>
+                    <li><button>LogIn</button></li>
+                    <li>About</li>
+                </ul>
+            </header>
+            <section>
+                <div class="description">
+
+                    <button>Create Account</button>
+                </div>
+                <div class="image">
+
+                </div>
+            </section>
+            <footer>
+
+            </footer>
+        </div>
+    </div>
+
 </body>
 </html>
