added some font family and added 2 classes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeHive</title>
     <link rel="stylesheet" href="home/style.css">
-    
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Tilt+Prism&display=swap" rel="stylesheet">
+
     <script src="home/java.js"></script>
 </head>
 <body>
@@ -13,15 +17,17 @@
     <div class="main">
         <div class="container">
             <header>
-                <h1>CodeHive</h1>
-                <ul>
-                    <li><button>LogIn</button></li>
-                    <li>About</li>
-                </ul>
+                <div class="logo">
+                    <h1>CodeHive</h1>
+                </div>
+                <div class="options">
+                    <h2>About Us</h2>
+                    <button>LogIn</button>
+                </div>
             </header>
             <section>
                 <div class="description">
-
+                    <p>CodeHive projects help to check others project</p>
                     <button>Create Account</button>
                 </div>
                 <div class="image">
