updated home page

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                     <h1>CodeHive</h1>
                 </div>
                 <div class="options">
-                    <h2>About Us</h2>
-                    <button>LogIn</button>
+                    <h2><a href="">About Us</a></h2>
+                    <button id="button-log-in">LogIn</button>
                 </div>
             </header>
             <section>
                 <div class="description">
-                    <p>CodeHive projects help to check others project</p>
+                    <p>CodeHive projects help to review and collaborate on various coding projects.</p>
                     <button>Create Account</button>
                 </div>
                 <div class="image">
