upated some styles inside css and added a logo

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="container">
             <header>
                 <div class="logo">
+                    <img src="icons/codeHive.svg" alt="logo">
                     <h1>CodeHive</h1>
                 </div>
                 <div class="options">
@@ -27,8 +28,10 @@
             </header>
             <section>
                 <div class="description">
-                    <p>CodeHive projects help to review and collaborate on various coding projects.</p>
-                    <button>Create Account</button>
+                    <h2>CodeHive: Ignite, Innovate, Inspire.</h2>
+                    <p>Empower your college journey with CodeHive. Share your projects, spark innovation, and inspire future students. Upload your projects, propose fresh ideas, and contribute to
+                         a valuable resource hub for the coding community.</p>
+                    <button>Get Started</button>
                 </div>
                 <div class="image">
 
