--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Tilt+Prism&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+
     <script src="home/java.js"></script>
 </head>
 <body>
@@ -18,20 +21,26 @@
         <div class="container">
             <header>
                 <div class="logo">
-                    <img src="icons/codeHive.svg" alt="logo">
+                    <span class="material-symbols-outlined">
+                        hive
+                        </span>
                     <h1>CodeHive</h1>
                 </div>
                 <div class="options">
                     <h2><a href="">About Us</a></h2>
                     <button id="button-log-in">LogIn</button>
                 </div>
+                <span class="material-symbols-outlined">
+                    menu
+                    </span>
             </header>
             <section>
                 <div class="description">
                     <h2>CodeHive: Ignite, Innovate, Inspire.</h2>
-                    <p>Empower your college journey with CodeHive. Share your projects, spark innovation, and inspire future students. Upload your projects, propose fresh ideas, and contribute to
+                    <p>Empower your college journey with CodeHive. 
+                        Upload your projects, propose fresh ideas, and contribute to
                          a valuable resource hub for the coding community.</p>
-                    <button>Get Started</button>
+                    <a href=""><button>Get Started</button></a>
                 </div>
                 <div class="image">
 
