made responsive of option list

--- a/index.html
+++ b/index.html
@@ -21,18 +21,28 @@
         <div class="container">
             <header>
                 <div class="logo">
-                    <span class="material-symbols-outlined">
-                        hive
-                        </span>
+                    <div class="name-log">
+                        <span class="material-symbols-outlined">
+                            hive
+                            </span>
+                    </div>
                     <h1>CodeHive</h1>
                 </div>
                 <div class="options">
                     <h2><a href="">About Us</a></h2>
                     <button id="button-log-in">LogIn</button>
                 </div>
-                <span class="material-symbols-outlined">
-                    menu
-                    </span>
+                <div class="menu">
+                    <div class="option-menu-list">
+                        <h2><a href="">About Us</a></h2>
+                        <button id="button-log-in">LogIn</button>
+                    </div>
+                    <button class="menu-button">
+                        <span class="material-symbols-outlined">
+                            menu
+                            </span>
+                    </button>
+                </div>
             </header>
             <section>
                 <div class="description">
@@ -40,7 +50,7 @@
                     <p>Empower your college journey with CodeHive. 
                         Upload your projects, propose fresh ideas, and contribute to
                          a valuable resource hub for the coding community.</p>
-                    <a href=""><button>Get Started</button></a>
+                    <a href=""><button id="button-get-started">Get Started</button></a>
                 </div>
                 <div class="image">
 
