updated menu list using js and css

--- a/index.html
+++ b/index.html
@@ -32,17 +32,19 @@
                     <button class="login-button"><a href="login/login.html">Log In</a></button>
                 </div>
 
+                <div class="menu">
                     <button class="menu-icon" id="menu-icon">
                         <span class="material-symbols-outlined">
                                 menu
                         </span>
                     </button>
-                    <div class="option-menu-list" id="option-menu-list">
-                        <a href="">About Us</a>
-                        <a href="login/login.html">Log In</a>
-                    </div>
-
+                </div>
+        
             </header>
+            <div class="option-menu-list" id="option-menu-list">
+                <a href="">About Us</a>
+                <a href="login/login.html">Log In</a>
+            </div>
             <section>
                 <div class="description">
                     <h2>CodeHive: Ignite, Innovate, Inspire.</h2>
