updated about-us section and added icon in tab

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeHive</title>
+    <link rel="icon" href="icons/codeHive.svg">
+    
+    
     <link rel="stylesheet" href="home/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -56,7 +59,45 @@
                 </div>
             </section>
            <section class="about-us" id="about-us">
-                <p>Lorem ipsum dolor </p>
+                <div class="content-in-about-us">
+                    <h2>About Us</h2>
+                    <p>Welcome to CodeHive, your go-to platform for connecting students and
+                        mentors in project development. We're dedicated to fostering
+                        innovation, collaboration, and knowledge-sharing among aspiring
+                        students and experienced mentors.
+                    </p>
+                    <h2>Our Mission</h2>
+                    <p>At CodeHive, our mission is to provide a seamless platform where students
+                        can submit their project ideas, connect with mentors, and collaborate on
+                        exciting projects that drive learning and growth. We believe that every
+                        project is an opportunity to learn, and every mentorship is a chance to
+                        inspire.
+                    </p>
+                    <h2>What We Offer</h2>
+                    <ul>
+                        <li><h3>Project Idea Submission:</h3>
+                            Students can submit their creative and innovative project
+                            ideas, and watch them come to life with the guidance of
+                            skilled mentors.
+                        </li>
+                        <li><h3>Mentor Support</h3>
+                            Experienced mentors offer guidance,insights and feedback to help
+                            students navigate the challenges and complexities of their projects.
+                        </li>
+                        <li><h3>Previous Year Project</h3>
+                            Students can check previous projects done by their senior's and can create a new project
+                            or extend previous projects.
+                        </li>
+                    </ul>
+                    <h2>Join Us</h2>
+                    <p>Whether you're a student with an innovative project idea, CodeHive
+                        is the place for you. Join our community and embark on a journey of growth,
+                        learning and collaboration.
+                    </p>
+                    <p>Thank you for choosing CodeHive as your project management platform.
+                        We're excited to see your ideas come to life!
+                    </p>
+                </div>
            </section>
         </div>
     </div>
