--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         </li>
                     </ul>
                     <h2>Join Us</h2>
-                    <p>Whether you're a student with an innovative project idea, CodeHive
+                    <p>If you're a student with an innovative project idea, CodeHive
                         is the place for you. Join our community and embark on a journey of growth,
                         learning and collaboration.
                     </p>
