created form and added some css

--- a/createAccount/index.html
+++ b/createAccount/index.html
@@ -19,6 +19,18 @@
                 </span>
             <h2>CodeHive</h2>
         </div>
+        <div class="contents">
+            <div class="form">
+                <form action="" method="POST">
+                    <input type="text" name="username" placeholder="Username" required>
+                    <input type="email" name="email" placeholder="Email" required>
+                    <input type="text" name="batch" placeholder="Batch" required>
+                    <input type="password" name="password" placeholder="Password" required>
+                    <input type="password" name="repeat-password" placeholder="Confirm Password">
+                </form>
+            </div>
+            <h3>Already have an account <a href="../login/login.html">Log In</a></h3>
+        </div>
     </div>
 </body>
 </html>
