--- a/createAccount/index.html
+++ b/createAccount/index.html
@@ -42,6 +42,7 @@
                         <input type="password" name="repeat-password" placeholder="" required>
                         <label for="repeat-password">Confirm Password</label>
                     </div>
+                    <input type="submit" class="submit">
                 </form>
             </div>
             <h3>Already have an account <a href="../login/login.html">LogIn</a></h3>
