updated the link between home page and create account page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <p>Empower your college journey with CodeHive. 
                         Upload your projects, propose fresh ideas, and contribute to
                          a valuable resource hub for the coding community.</p>
-                    <a href=""><button id="button-get-started">Get Started</button></a>
+                    <a href="createAccount/index.html"><button id="button-get-started">Get Started</button></a>
                 </div>
             </section>
            <section class="about-us" id="about-us">
