--- a/login/login.html
+++ b/login/login.html
@@ -11,10 +11,12 @@
 <body>
     <div class="container">
         <div class="logo">
-            <span class="material-symbols-outlined">
-                hive
-                </span>
-            <h2>CodeHive</h2>
+            <a href="../index.html">
+                <span class="material-symbols-outlined">
+                    hive
+                    </span>
+                <h2>CodeHive</h2>
+            </a>
         </div>
        <div class="form">
         <h2>Welcome</h2>
