--- a/createAccount/index.html
+++ b/createAccount/index.html
@@ -13,10 +13,12 @@
 <body>
     <div class="container">
         <div class="logo">
-            <span class="material-symbols-outlined">
-                hive
-                </span>
-            <h2>CodeHive</h2>
+            <a href="index.html">
+                <span class="material-symbols-outlined">
+                    hive
+                    </span>
+                <h2>CodeHive</h2>
+            </a>
         </div>
         <div class="contents">
             <div class="form">
