updated dashboard css

--- a/admin/index.html
+++ b/admin/index.html
@@ -35,7 +35,12 @@
             </div>
         </div>
         <div class="dashboard">
-            
+            <ul class="dashboard-list">
+                <li><a href="">Home</a></li>
+                <li><a href="">Projects</a></li>
+                <li><a href="">Notifications</a></li>
+                <li><a href="">Idea Submission</a></li>
+            </ul>
         </div>
         <div class="contents">
 
