updated the admin page css, made it responsive

--- a/admin/index.html
+++ b/admin/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="header">
             <div class="menu">
-                <button><span class="material-symbols-outlined">menu</span>
+                <button id="menu-button"><span class="material-symbols-outlined">menu</span>
                 </button>
             </div>
             <div class="logo">
@@ -31,20 +31,23 @@
                 <span class="material-symbols-outlined">search</span>
             </div>
             <div class="current-user">
-                <h2 id="current-user">admin</h2>
+                <h2 id="current-user">A</h2>
             </div>
         </div>
-        <div class="dashboard">
-            <ul class="dashboard-list">
-                <li><a href="">Home</a></li>
-                <li><a href="">Projects</a></li>
-                <li><a href="">Notifications</a></li>
-                <li><a href="">Idea Submission</a></li>
-            </ul>
-        </div>
-        <div class="contents">
-
+        <div class="section">
+            <div class="sidebar" id="sidebar">
+                <ul class="sidebar-list">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Projects</a></li>
+                    <li><a href="">Notifications</a></li>
+                    <li><a href="">Idea Submission</a></li>
+                </ul>
+            </div>
+            <div class="contents">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis autem veniam dolor hic dicta pariatur! Molestiae recusandae voluptatum vero sit, animi doloribus optio voluptates laborum sapiente veritatis totam accusamus ratione alias fugiat molestias natus?
+            </div>
         </div>
     </div>
+    <script src="java.js"></script>
 </body>
 </html>
