--- a/admin/index.html
+++ b/admin/index.html
@@ -26,8 +26,11 @@
                 <span class="material-symbols-outlined">hive</span>
                 <h1>CodeHive</h1>
             </div>
-            <div class="search">
+            <div class="search" id="search">
                 <input type="search" name="search" placeholder="Search">
+                <span class="material-symbols-outlined">search</span>
+            </div>
+            <div class="search-button" id="search-button">
                 <span class="material-symbols-outlined">search</span>
             </div>
             <div class="current-user">
