changed file name of js

--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@
         </div>
     </div>
 
-    <script src="home/java.js"></script>
+    <script src="home/script.js"></script>
 </body>
 </html>
