--- a/admin/index.html
+++ b/admin/index.html
@@ -7,9 +7,6 @@
     <link rel="icon" href="../icons/codeHive.svg">
 
     <link rel="stylesheet" href="style.css">
-
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,11 +16,11 @@
     <div class="container">
         <div class="header">
             <div class="menu">
-                <button id="menu-button"><span class="material-symbols-outlined">menu</span>
+                <button id="menu-button"><img src="../icons/menu.svg" alt="menu">
                 </button>
             </div>
             <div class="logo">
-                <span class="material-symbols-outlined">hive</span>
+                <img src="../icons/codeHive.svg" alt="">
                 <h1>CodeHive</h1>
             </div>
             <div class="current-user">
@@ -40,27 +37,7 @@
                 </ul>
             </div>
             <div class="contents" id="contents">
-               <div class="projects link" id="projects">
-                Projects Overview: 
-                    Lists the projects associated with the user.
-                    Each project card displays the project title, brief description, status (e.g., 
-                    In Progress, Completed), and a "View Details" button.
-               </div>
-               <div class="search-files link" id="search-files">
-                Search and Discovery:
-                Offers a search bar and filters for finding new projects or mentors.
-                Results are displayed in a list or grid format.
-               </div>
-               <div class="notification link" id="notification">
-                Notification Center:
-                Lists recent notifications, including project approvals, new messages, and updates.
-                Allows users to mark notifications as read or delete them.
-               </div>
-                <div class="idea link" id="idea">
-                Project Idea Submission:
-                If the user is a student, a section allows them to submit new project ideas.
-                Includes a form with fields for the project title, description, objectives, and file uploads.
-                </div>
+               
             </div>
         </div>
     </div>
