--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Tilt+Prism&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Roboto+Condensed&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
@@ -22,9 +22,7 @@
             <header>
                 <div class="logo">
                     <div class="name-log">
-                        <span class="material-symbols-outlined">
-                            hive
-                            </span>
+                        <img src="../icons/codeHive.svg" alt="">
                     </div>
                     <a href="#home-main">
                         <h1>CodeHive</h1>
@@ -37,9 +35,7 @@
 
                 <div class="menu">
                     <button class="menu-icon" id="menu-icon">
-                        <span class="material-symbols-outlined">
-                                menu
-                        </span>
+                        <img src="../icons/menu.svg" alt="menu">
                     </button>
                 </div>
         
