changed icons file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <header>
                 <div class="logo">
                     <div class="name-log">
-                        <img src="../icons/codeHive.svg" alt="">
+                        <img src="https://raw.githubusercontent.com/alphaleo21/miniproject/main/icons/codeHive.svg" alt="">
                     </div>
                     <a href="#home-main">
                         <h1>CodeHive</h1>
