--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <header>
                 <div class="logo">
                     <div class="name-log">
-                        <img src="https://raw.githubusercontent.com/alphaleo21/miniproject/main/icons/codeHive.svg" alt="">
+                       <img src="icons/codeHive.svg" alt="hive">
                     </div>
                     <a href="#home-main">
                         <h1>CodeHive</h1>
@@ -35,7 +35,7 @@
 
                 <div class="menu">
                     <button class="menu-icon" id="menu-icon">
-                        <img src="../icons/menu.svg" alt="menu">
+                        <img src="icons/menu.svg" alt="menu">
                     </button>
                 </div>
         
