updated css for phone view

--- a/login/login.html
+++ b/login/login.html
@@ -12,9 +12,7 @@
     <div class="container">
         <div class="logo">
             <a href="../index.html">
-                <span class="material-symbols-outlined">
-                    hive
-                    </span>
+                <img src="../icons/codeHive.svg" alt="">
                 <h2>CodeHive</h2>
             </a>
         </div>
