--- a/createAccount/index.html
+++ b/createAccount/index.html
@@ -13,10 +13,8 @@
 <body>
     <div class="container">
         <div class="logo">
-            <a href="index.html">
-                <span class="material-symbols-outlined">
-                    hive
-                    </span>
+            <a href="../index.html">
+                <img src="../icons/codeHive.svg" alt="">
                 <h2>CodeHive</h2>
             </a>
         </div>
