--- a/pages/createAccount.html
+++ b/pages/createAccount.html
@@ -6,7 +6,7 @@
     <title>Create Account</title>
     <link rel="icon" href="../icons/codeHive.svg">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/createAccount.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <!-- icon link -->
 </head>
@@ -44,7 +44,7 @@
                     <input type="submit" class="submit">
                 </form>
             </div>
-            <h3>Already have an account <a href="../login/login.html">LogIn</a></h3>
+            <h3>Already have an account <a href="../pages/login.html">LogIn</a></h3>
         </div>
     </div>
 </body>
