--- a/pages/login.html
+++ b/pages/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="icon" href="../icons/codeHive.svg">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="../css/login.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
@@ -29,9 +29,9 @@
                     </div>
                     <input class="submit" type="submit" value="Login">
                 </form>
-                <h3>New to this <a href="../createAccount/index.html">Create Account</a></h3>    
+                <h3>New to this <a href="../pages/createAccount.html">Create Account</a></h3>    
         </div>                 
     </div>
 </body>
-<script src="login.js"></script>
+<script src="../js/createAccount.js"></script>
 </html>
