added scrolling to project description

--- a/pages/student-project.html
+++ b/pages/student-project.html
@@ -104,7 +104,9 @@
                     <div class="project-box">
                         <div class="file-content">
                             <h4>project name</h4>
-                            <p>project description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum consequuntur fugit hic assumenda! Perferendis recusandae et adipisci quae</p>
+                            <div class="project-description">
+                                <p>project description Lorem ipsum project description Lorem ipsum project description Lorem ipsum project description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum consequuntur fugit hic assumenda! Perferendis recusandae et adipisci quae</p>
+                            </div>
                             <div class="author">
                                 <h5>Author</h5>
                                 
