updated project file

--- a/pages/student-project.html
+++ b/pages/student-project.html
@@ -24,7 +24,7 @@
             </div>
             <div class="link">
                 <img src="../icons/idea.svg" alt="">
-                <a href="" id="idea-submission">Idea Submission</a>
+                <a href="../pages/student-idea-submission.html" id="idea-submission">Idea Submission</a>
             </div>
             <div class="link">
                 <img src="../icons/upload.svg" alt="">
