added a mentor select option

--- a/pages/student-idea-submission.html
+++ b/pages/student-idea-submission.html
@@ -98,6 +98,14 @@
             
                 <label for="attachments">Attachments:</label>
                 <input type="file" id="attachments" name="attachments"><br><br>
+
+                <label for="mentor">Select Mentor:</label>
+                <select id="mentor" name="mentor" required>
+                    <option value="mentor1">Mentor 1</option>
+                    <option value="mentor2">Mentor 2</option>
+                    <option value="mentor3">Mentor 3</option>
+                    <!-- Add more mentor options as needed -->
+                </select>
             
                 <label for="contactName">Username:</label>
                 <input type="text" id="username" name="username" required><br><br>
