--- a/pages/student-project.html
+++ b/pages/student-project.html
@@ -28,7 +28,7 @@
             </div>
             <div class="link">
                 <img src="../icons/upload.svg" alt="">
-                <a href="" id="your-projects">Your Uploads</a>
+                <a href="../pages/student-uploads.html" id="your-projects">Your Uploads</a>
             </div>
             <div class="link">
                 <img src="../icons/bell.svg" alt="">
