--- a/pages/student-project.html
+++ b/pages/student-project.html
@@ -32,7 +32,7 @@
             </div>
             <div class="link">
                 <img src="../icons/bell.svg" alt="">
-                <a href="" id="notification">Notifications</a>
+                <a href="../pages/student-notification.html" id="notification">Notifications</a>
             </div>
             <div class="h-divider"></div>
             <div class="link">
