--- a/pages/student-notification.html
+++ b/pages/student-notification.html
@@ -28,7 +28,7 @@
             </div>
             <div class="link">
                 <img src="../icons/upload.svg" alt="">
-                <a href="../pages/student-project.html" id="your-projects">Your Uploads</a>
+                <a href="../pages/student-uploads.html" id="your-projects">Your Uploads</a>
             </div>
             <div class="link notifi">
                 <img src="../icons/bell.svg" alt="">
@@ -37,7 +37,7 @@
             <div class="h-divider"></div>
             <div class="link">
                 <img src="../icons/setting.svg" alt="">
-                <a href="" id="setting">Settings</a>
+                <a href="../pages/settings.html" id="setting">Settings</a>
             </div>
             <div class="link">
                 <img src="../icons/logout.svg" alt="">
