--- a/pages/student-project.html
+++ b/pages/student-project.html
@@ -37,7 +37,7 @@
             <div class="h-divider"></div>
             <div class="link">
                 <img src="../icons/setting.svg" alt="">
-                <a href="" id="setting">Settings</a>
+                <a href="../pages/settings.html" id="setting">Settings</a>
             </div>
             <div class="link">
                 <img src="../icons/logout.svg" alt="">
