updated mentor home page

--- a/pages/mentor-home.html
+++ b/pages/mentor-home.html
@@ -82,14 +82,18 @@
                     <div class="idea-submission">
                         <h4>Student Name 1</h4>
                         <p>Title: Idea Title 1</p>
-                        <p>Description: Brief description of the idea submitted by the student.</p>
+                        <div class="description">
+                            <p>Description: Brief description of the idea submitted by the Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati delectus dignissimos aliquid maxime assumenda nisi ipsam suscipit, accusamus, cum itaque laborum repellendus rerum temporibus ad? Voluptatibus atque debitis ratione fugit!</p>
+                        </div>
                         <button class="approve-button">Approve</button>
                         <button class="reject-button">Reject</button>
                     </div>
                     <div class="idea-submission">
                         <h4>Student Name 1</h4>
                         <p>Title: Idea Title 1</p>
-                        <p>Description: Brief description of the idea submitted by the student.</p>
+                        <div class="description">
+                            <p>Description: Brief description of the idea submitted by the Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati delectus dignissimos aliquid maxime assumenda nisi ipsam suscipit, accusamus, cum itaque laborum repellendus rerum temporibus ad? Voluptatibus atque debitis ratione fugit!</p>
+                        </div>
                         <button class="approve-button">Approve</button>
                         <button class="reject-button">Reject</button>
                     </div>
@@ -104,14 +108,18 @@
                     <div class="project-upload">
                         <h4>Student Name 2</h4>
                         <p>Project Title: Project Title 2</p>
-                        <p>Description: Brief description of the project uploaded by the student.</p>
+                        <div class="description">
+                            <p>Description: Brief description of the project uploaded by the student.</p>
+                        </div>
                         <button class="approve-button">Approve</button>
                         <button class="reject-button">Reject</button>
                     </div>
                     <div class="project-upload">
                         <h4>Student Name 2</h4>
                         <p>Project Title: Project Title 2</p>
-                        <p>Description: Brief description of the project uploaded by the student.</p>
+                        <div class="description">
+                            <p>Description: Brief description of the project uploaded by the student.</p>
+                        </div>
                         <button class="approve-button">Approve</button>
                         <button class="reject-button">Reject</button>
                     </div>
